# Visa-Direct-SDK-TS-Python

./: .env.current  .env.simulator  .gitignore  CLEANUP_SUMMARY.md  COMMANDS.md  COMPREHENSIVE_TEST_REPORT.md  DASHBOARD_DESIGN_BRIEF.md  DEPLOYMENT_GUIDE.md  DESIGN_SYSTEM.md  DESIGN_SYSTEM_IMPLEMENTATION.md  DOCUMENTATION_INDEX.md  FINAL_MVP_ASSESSMENT_REPORT.md  GB_PH_PILOT_GUIDE.md  HANDOVER.md  HANDOVER_v2.1.4.md  MVP_LIVE_SANDBOX_GUIDE.md  MVP_MUST_HAVE_FEATURES_SUMMARY.md  PILOT_READINESS_PLAN.md  PILOT_READINESS_SUMMARY.md  PRODUCTION_HARDENING_SUMMARY.md  PRODUCTION_RUNBOOK.md  QUICK_REFERENCE.md  README.md  SIMULATOR_ASSESSMENT_REPORT.md  SPEC.md  TYPOGRAPHY_ALIGNMENT_SUMMARY.md  VISA_DIRECT_SETUP.md  configure_environment.sh  cursor.json  package-lock.json  package.json  run_comprehensive_tests.sh  run_gb_ph_pilot.sh  setup_live_sandbox.sh  setup_real_api.sh  test_real_api.sh  transition_to_real_api.sh  validate_mvp.sh  visa_real_api.env
python-sdk/: README.md  pyproject.toml
python-sdk/examples/: fi_internal_to_card.py  gb_domestic_pilot.py  gb_ph_pilot.py  live_sandbox_fi_to_card.py
python-sdk/tests/: test_dynamo_adapters.py  test_guards.py
python-sdk/visa_direct_sdk/: __init__.py  client.py  errors.py
python-sdk/visa_direct_sdk/core/: orchestrator.py
python-sdk/visa_direct_sdk/dx/: builder.py
python-sdk/visa_direct_sdk/policy/: corridor_policy.py
python-sdk/visa_direct_sdk/services/: compliance_service.py  quoting_service.py  recipient_service.py
python-sdk/visa_direct_sdk/storage/: cache.py  idempotency_store.py  receipt_store.py
(+130 files in other folders)
